VS/pryz-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pryzm-gw
    #namespace: some-config-namespace
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "tls-secret"
    hosts:
      - "*"
