VS/keycloack-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
    - "*"
  gateways:
    - pryzm-gw
  http:
    - match:
        - uri:
            prefix: "/keycloak/"
        - uri:
            prefix: "/keycloak"
      route:
        - destination:
            host: keycloak
            port:
              number: 80
      rewrite:
        uri: "/"
