VS/pryzm360ui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pryzm360-ui-pryzm360ui
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - match:
        - uri:
            prefix: "/"
        - uri:
            prefix: "/"
      route:
        - destination:
            host: pryzm360-ui-pryzm360ui
            port:
              number: 80
      rewrite:
        uri: "/"
