VS/pryzmapilayer-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pryzmapilayer
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - match:
        - uri:
            prefix: "/pryzmapilayer/"
        - uri:
            prefix: "/pryzmapilayer"
      route:
        - destination:
            host: pryzmapilayer
            port:
              number: 5600
      rewrite:
        uri: "/"
