VS/pryzmappui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pryzmappui
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - match:
        - uri:
            prefix: "/catalog"
        - uri:
            prefix: "/catalog"
      route:
        - destination:
            host: pryzmappui
            port:
              number: 80
      rewrite:
        uri: "/"
