VS/pryzmcatalogbackend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pryzmcatalogbackend
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - match:
        - uri:
            prefix: "/pryzmcatalogbackend"
        - uri:
            prefix: "/pryzmcatalogbackend/"
      route:
        - destination:
            host: pryzmcatalogbackend
            port:
              number: 8585
      rewrite:
        uri: "/"
