VS/pryzmcmbackend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pryzmcmbackend
spec:
  hosts:
    - "*"
  gateways:
    - pryzm-gateway
  http:
    - match:
        - uri:
            prefix: "/pryzmcmbackend/"
        - uri:
            prefix: "/pryzmcmbackend"
      route:
        - destination:
            host: pryzmcmbackend
            port:
              number: 5400
      rewrite:
        uri: "/"
