VS/pryzmnotifier-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pryzmnotifier
spec:
  hosts:
    - "*"
  gateways:
    - pryzm-gateway
  http:
    - match:
        - uri:
            prefix: "/pryzmnotifier/"
        - uri:
            prefix: "/pryzmnotifier"
      route:
        - destination:
            host: pryzmnotifier
            port:
              number: 80
      rewrite:
        uri: "/"
