VS/pryzmqueue-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pryzmqueue
spec:
  hosts:
    - "*"
  gateways:
    - pryzm-gateway
  http:
    - match:
        - uri:
            prefix: "/pryzmqueue/"
        - uri:
            prefix: "/pryzmqueue"
      route:
        - destination:
            host: pryzmappui
            port:
              number: 80
      rewrite:
        uri: "/"
